# CSC524-Iris-Recognition

./: .gitignore  db_manager.py  filter.py  main.py  pyproject.toml
