[project]
name = "csc524-iris-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cv2-enumerate-cameras>=1.3.3",
    "huggingface-hub>=1.14.0",
    "matplotlib>=3.10.9",
    "onnx>=1.21.0",
    "onnxruntime>=1.25.1",
    "opencv-python>=4.13.0.92",
    "pydantic==1.10.16",
    "pyyaml>=6.0.3",
    "open-iris==1.11.1",
]

[tool.uv]
dependency-metadata = [
  { name = "open-iris", version = "1.11.1", requires-dist = [] },
]
